<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rhyme.magicpic.MainActivity">
    <LinearLayout
        android:id="@+id/main_top"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:gravity="right|center_vertical"
            android:text="@string/choise"
            android:layout_height="match_parent" />
        <Spinner
            android:id="@+id/main_spinner"
            android:layout_width="wrap_content"
            android:entries="@array/difficutes"
            android:layout_height="wrap_content">
        </Spinner>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/main_bottom"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/camera"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_marginRight="5dp"
            android:textColor="@android:color/white"
            android:background="@drawable/main_bottom_select"
            android:layout_height="wrap_content"
            android:text="@string/camera"
            />
        <TextView
            android:id="@+id/pictures"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_marginLeft="5dp"
            android:textColor="@android:color/white"
            android:background="@drawable/main_bottom_select"
            android:layout_height="wrap_content"
            android:text="@string/pictures"
            />
    </LinearLayout>
    <GridView
        android:id="@+id/main_gv"
        android:numColumns="4"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:verticalSpacing="5dp"
        android:horizontalSpacing="5dp"
        android:layout_below="@id/main_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>
